--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <img src="assets/5.jpg" alt="Sample Image 5">
     </div>
 
-    <a href="https://naver.com" class="cta-button">앱 다운로드하기</a> 
+    <a href="https://tally.so/r/wdPLeN" class="cta-button">앱 다운로드하기</a> 
 
 </body>
 </html>
